# AutonomousDrone

./: .gitignore  CMakeLists.txt  README.md  build.sh  generalSettings.json  install.sh  installDep.sh
Examples/Monocular/: offline_orb_slam.cc  runAutonomousDrone  runCharger  tello.cc  testPolygon
Examples/ROS/ORB_SLAM2/: CMakeLists.txt
Examples/ROS/ORB_SLAM2/src/: ros_stereo.cc
algo/include/: DBSCAN.h  Graph.h  Navigation.h  Pizza.h  Polygon.h  RRT.h  thoretic.h
algo/src/: DBSCAN.cpp  Graph.cpp  Navigation.cpp  Pizza.cpp  Polygon.cpp  RRT.cpp  ransac_solver.cpp  thoretic.cpp
config/: logitech.yaml  tello-TELLO-5C7EBF.yaml  tello_5BFA7F.yaml  tello_5f217e.yaml  tello_9EE955.yaml  tello_aruco_5BFA7F.yaml  tello_aruco_9F5EC2.yaml  tello_gal.yaml  tello_static.yaml  tzukComputerCamera.yaml
datasets/buildings/: pointData-1099140956.csv
datasets/buildings/Lab/: pointData0.csv  pointData2022-02-01_10:20:59Z.csv  pointData2022-02-06_07:59:48Z.csv  pointData2022-02-07_14:20:05Z.csv  pointDataAfterFilter.csv  pointDataBarLab.csv
datasets/buildings/Lab/filterTest/: pointData2.csv  pointDataAfterFilter1.csv  pointDataAfterFilter2.csv
datasets/buildings/litemapScans/: 3dmodel_no_triangulation.ply.xyz
exe/: cameraCalibretion  cameraCalibretion.cpp  flyToCharger.cpp  main  mapCreating  mapCreating.cpp  offline_orb_slam  offline_orb_slam.cc  runAutonomousDrone.cpp  runCharger  runCharger.cpp  tello.cc  testDroneCommunication  testDroneCommunication.cpp  testNavigationPathing  testNavigationPathing.cpp  testPolygon  testPolygon.cpp
include/: Converter.h  Frame.h  FrameDrawer.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  MyLoopClosing.h  MySim3Solver.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h
slam-bar/include/: Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  Optimizer.h  Serialization.h  System.h  Tracking.h  Viewer.h
slam-bar/src/: CSVReader.cc  Frame.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  RaspberryKeyFrame.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
slam/include/: BoostArchiver.h  Converter.h  Frame.h  FrameDrawer.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
slam/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  MyLoopClosing.cc  MySim3Solver.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
tello/: AutonomousDrone.cpp  AutonomousDrone.h  Auxiliary.cpp  Auxiliary.h  Charger.cpp  Charger.h  DBSCAN.cpp  DBSCAN.h  Frame.cpp  Frame.h  Line.cpp  Line.h  Pizza.cpp  Pizza.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Room.cpp  Room.h  flyToCharger.cpp  runAutonomousDrone.cpp  runCharger.cpp  testPolygon.cpp
tello/include/: .AutonomousDrone.h  AutonomousDrone.h  Auxiliary.h  Charger.h  DBSCAN.h  Navigation.h  Polygon.h  gpio.h
tello/src/: .AutonomousDrone_temp.cpp  AutonomousDrone.cpp  Auxiliary.cpp  Charger.cpp  DBSCAN.cpp  Frame.cpp  Line.cpp  Navigation.cpp  Pizza.cpp  Point.cpp  Polygon.cpp  Room.cpp  flyToCharger.cpp  gpio.cpp
tools/: bin_vocabulary.cc
utils/include/: Auxiliary.h  Frame.h  Line.h  Node.h  Point.h
utils/src/: Auxiliary.cpp  Frame.cpp  Line.cpp  Node.cpp  Point.cpp  Room.cpp
